--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,5 +27,10 @@ jobs:
     
     - name: Run unit tests
       run: ./mvnw test
+
+    - name: Check if documentation builds
+      run: ./mvnw javadoc:javadoc
+
+      
     
   
