--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Check if documentation builds
       run: ./mvnw javadoc:javadoc
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Check if app builds with Docker
+      run: docker build -t test-build .
+
       
     
   
