--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Deploy to Netlify in production
       run: |
         netlify deploy --prod \
-          --dir target/site/apidocs/apidocs \
+          --dir target/reports/apidocs \
           --auth ${{secrets.NETLIFY_AUTH_TOKEN}} \
           --site ${{secrets.NETLIFY_SITE_ID}}
       
